--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "printWidth": 100,
+  "semi": true,
   "singleQuote": true,
-  "bracketSpacing": true,
-  "semi": true
+  "bracketSpacing": true
 }
