--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 NODE_HOST=0.0.0.0
 NODE_PORT=3000
+
+# Twilio
+TWILIO_ACCOUNT_SID=XXXXX*******************XXXX
+TWILIO_AUTH_TOKEN=XXXXX*******************XXXX
+TWILIO_TEST_GENERIC_PHONE_NUMBER=+XXXXXXXXXXX
