--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,38 @@
   "prettier.eslintIntegration": true,
   "editor.formatOnSave": true,
   "eslint.autoFixOnSave": true,
-  "eslint.enable": true
+  "eslint.enable": true,
+  "cSpell.enabledLanguageIds": [
+    "asciidoc",
+    "c",
+    "cpp",
+    "csharp",
+    "css",
+    "go",
+    "handlebars",
+    "html",
+    "jade",
+    "java",
+    "javascript",
+    "javascriptreact",
+    "json",
+    "jsonc",
+    "latex",
+    "less",
+    "markdown",
+    "php",
+    "plaintext",
+    "pug",
+    "python",
+    "restructuredtext",
+    "rust",
+    "scala",
+    "scss",
+    "text",
+    "todo",
+    "typescript",
+    "typescriptreact",
+    "yaml",
+    "yml"
+  ]
 }
