--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "twilio": "^3.31.0"
   },
   "devDependencies": {
